Se hace el login bonito y se intenta hacer el listado de viviendas

--- a/alquilame/pubspec.yaml
+++ b/alquilame/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   injectable: ^2.1.0
   http_interceptor: ^1.0.1
   shared_preferences: ^2.0.17
+  stream_transform: ^2.0.0
+  bloc_concurrency: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
