Se hacen los detalles de la vivienda, perfil de usuario, viviendas usuario y se empieza favoritos de usuario

--- a/alquilame/pubspec.yaml
+++ b/alquilame/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.0.17
   stream_transform: ^2.0.0
   bloc_concurrency: ^0.2.0
+  line_awesome_flutter: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
