--- a/alquilame/pubspec.yaml
+++ b/alquilame/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   stream_transform: ^2.0.0
   bloc_concurrency: ^0.2.0
   line_awesome_flutter: ^2.0.0
+  flutter_form_bloc: ^0.30.1
 
 
   # The following adds the Cupertino Icons font to your application.
