--- a/alquilame/pubspec.yaml
+++ b/alquilame/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   bloc_concurrency: ^0.2.0
   line_awesome_flutter: ^2.0.0
   flutter_form_bloc: ^0.30.1
+  image_picker: ^0.8.6+1
+  image_cropper: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
